Working full build